fix: Fix background colour on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+html,body{
+  background-color: #252525 !important;
+}
 .App{
   font-family: 'Montserrat', sans-serif;
 }
